--- a/sf-auto-test.yml
+++ b/sf-auto-test.yml
@@ -1,42 +1,49 @@
 name: "Salesforce Deploy Check"
 on:
-    pull_request:
-        types:
-            - opened
-            - synchronize
-            - reopened
-        branches:
-            - develop
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+    branches:
+      - develop
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-              with:
-                  ref: ${{github.head_ref}}
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{github.head_ref}}
 
-            - uses: actions/setup-node@v1
-              with:
-                  node-version: ">=14"
-                  check-latest: true
+      - uses: actions/setup-node@v1
+        with:
+          node-version: ">=14"
+          check-latest: true
 
-            - name: "Install Salesforce CLI"
-              run: |
-                  npm install sfdx-cli
-                  node_modules/sfdx-cli/bin/run --version
-                  node_modules/sfdx-cli/bin/run plugins --core
+      - name: "Install Salesforce CLI"
+        run: |
+          npm install sfdx-cli
+          node_modules/sfdx-cli/bin/run --version
+          node_modules/sfdx-cli/bin/run plugins --core
 
-            - name: "Populate auth file with SFDX_URL secret"
-              shell: bash
-              run: "echo ${{secrets.SFDX_LR_TEST_URL}} > SFDX_QA"
+      - name: "Populate auth file with SFDX_URL secret"
+        shell: bash
+        run: "echo ${{secrets.SFDX_URL}} > SFDX_QA"
 
-            - name: "Authenticate against developer sandbox"
-              run: node_modules/sfdx-cli/bin/run force:auth:sfdxurl:store -f SFDX_QA -s -a LRQA
+      - name: "Authenticate against developer sandbox"
+        run: node_modules/sfdx-cli/bin/run force:auth:sfdxurl:store -f SFDX_QA -s -a LRQA
 
-            - name: "Create Scratch Org"
-              run: |
-                  mkdir ./release
-                  node_modules/sfdx-cli/bin/run force:source:convert -d ./release
+      - name: "Authenticate against dev hub"
+        uses: forcedotcom/salesforcedx-actions@master
+        with:
+          args: "force:auth:sfdxurl:store --sfdxurlfile=SFDX_QA --setalias=devhub --setdefaultdevhubusername"
 
-            - name: "Deploy check"
-              run: node_modules/sfdx-cli/bin/run force:source:deploy --checkonly -x ./release/package.xml -u ${{secrets.SFDX_DEV_USER_NAME}}
+      - name: "Create Scratch Org"
+        uses: forcedotcom/salesforcedx-actions@master
+        with:
+          args: "force:org:create --definitionfile=config/project-scratch-def.json --setalias=scratch-org --setdefaultusername"
+
+      - name: "Push source"
+        uses: forcedotcom/salesforcedx-actions@master
+        with:
+          args: "force:source:push"
