--- a/.github/workflows/pr-auto-test.yml
+++ b/.github/workflows/pr-auto-test.yml
@@ -34,7 +34,7 @@ jobs:
               run: node_modules/sfdx-cli/bin/run force:auth:sfdxurl:store -f SFDX_QA -s -a LRQA
 
             - name: "Create Scratch Org"
-              run: node_modules/sfdx-cli/bin/run sfdx force:org:create -f config/project-scratch-def.json -a logidev-test --setdefaultusername
+              run: node_modules/sfdx-cli/bin/run force:org:create -f config/project-scratch-def.json -a logidev-test --setdefaultusername
 
             - name: "Push source"
-              run: node_modules/sfdx-cli/bin/run sfdx force:source:push
+              run: node_modules/sfdx-cli/bin/run force:source:push
