--- a/.github/workflows/pr-auto-test.yml
+++ b/.github/workflows/pr-auto-test.yml
@@ -33,8 +33,13 @@ jobs:
             - name: "Authenticate against developer sandbox"
               run: node_modules/sfdx-cli/bin/run force:auth:sfdxurl:store -f SFDX_QA -s -a LRQA
 
-            - name: "Create Scratch Org"
-              run: node_modules/sfdx-cli/bin/run force:org:create -f config/project-scratch-def.json -a logidev-test --setdefaultusername
+            - name: "Convert metadata"
+              # sandboxからソースをメタデータ形式で取得し、releaseフォルダに格納する
+              run: |
+                  mkdir ./release
+                  node_modules/sfdx-cli/bin/run force:source:convert -d ./release
 
-            - name: "Push source"
-              run: node_modules/sfdx-cli/bin/run force:source:push
+            - name: "Deploy check"
+              # sandboxへのデプロイチェック。--checkonly：デプロイされたメタデータを検証し、すべての Apex テストを実行しますが、デプロイが org に保存されることはありません。
+              # -x: マニフェストファイルのパス指定。-u: 対象の組織、ユーザーネームを指定する。
+              run: node_modules/sfdx-cli/bin/run force:source:deploy --checkonly -x ./release/package.xml -u ${{secrets.SFDX_DEV_USER_NAME}} --testlevel RunLocalTests
