--- a/.github/workflows/pr-auto-test.yml
+++ b/.github/workflows/pr-auto-test.yml
@@ -42,4 +42,4 @@ jobs:
       - name: "Deploy check"
               # sandboxへのデプロイチェック。--checkonly：デプロイされたメタデータを検証し、すべての Apex テストを実行しますが、デプロイが org に保存されることはありません。
               # -x: マニフェストファイルのパス指定。-u: 対象の組織、ユーザーネームを指定する。
-        run: node_modules/sfdx-cli/bin/run force:source:deploy --checkonly -x ./release/package.xml -u LRQA 
+        run: node_modules/sfdx-cli/bin/run force:source:deploy --checkonly -x ./release/package.xml -u LRQA -l RunLocalTests
