--- a/.github/workflows/pr-auto-test.yml
+++ b/.github/workflows/pr-auto-test.yml
@@ -9,7 +9,7 @@ on:
       - develop
 jobs:
   build:
-    if : ${{!contains(github.event.pull_request.labels.name,'SkipTest')}}
+    if : ${{!contains(github.event.pull_request.labels.*.name,'SkipTest')}}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,7 +18,7 @@ jobs:
 
       - uses: actions/setup-node@v1
         with:
-          node-version: ">=14"
+          node-version: ">=16"
           check-latest: true
 
       - name: "Install Salesforce CLI"
